added TTL indexes to Sessions Collections
