# src/main.rs
@@ -8,8 +8,8 @@ use axum::{
 use chrono::{DateTime, Utc};
 use mongodb::{
     bson::doc,
-    options::{ClientOptions, ServerApi, ServerApiVersion},
-    Client,
+    options::{ClientOptions, ServerApi, ServerApiVersion, IndexOptions, CreateIndexOptions},
+    Client, IndexModel,
 };
 use serde::{Deserialize, Serialize};
 use std::{net::SocketAddr, sync::Arc};
@@ -21,9 +21,13 @@ static COL_USER_LETTERS: &str = "user_latterLetters";
 
 static DB_SESSIONS: &str = "login_sessions";
 static COL_USER_SESS: &str = "user_sessions";
+static COL_PASSWORD_RESET : &str = "Password_tokens";
+static COOKIE_SESSION: &str = "sesshawn";
+
+
 
 #[derive(Serialize, Deserialize)]
-struct sessionDocument {
+struct SessionDocument {
     _id: uuid::Uuid,
     user_email: String,
     expiry_date: DateTime<Utc>,
@@ -48,6 +52,34 @@ where
 }
 
 
+async fn start_mongo() -> mongodb::error::Result<Client> {
+    let uri = "mongodb://localhost:9999/?directConnection=true&tls=false&maxPoolSize=10";
+    let mut client_options = ClientOptions::parse(uri).await?;
+
+    let server_api = ServerApi::builder().version(ServerApiVersion::V1).build();
+    client_options.server_api = Some(server_api);
+    let client = Client::with_options(client_options)?;
+
+    client
+        .database("admin")
+        .run_command(doc! { "ping": 1 }, None)
+        .await?;
+    println!("Pinged your deployment. You successfully connected to MongoDB!");
+    client.database(DB_SESSIONS).collection::<SessionDocument>(COL_PASSWORD_RESET)
+        .create_index(IndexModel::builder()
+            .keys(doc! {"expiry_date": 1})
+            .options(IndexOptions::builder().expire_after(std::time::Duration::from_secs(5)).build())
+            .build(),
+        None);
+    client.database(DB_SESSIONS).collection::<SessionDocument>(COL_USER_SESS)
+    .create_index(IndexModel::builder()
+        .keys(doc! {"expiry_date": 1})
+        .options(IndexOptions::builder().expire_after(std::time::Duration::from_secs(5)).build())
+        .build(),
+    None);
+    Ok(client)
+}
+
 
 #[tokio::main]
 async fn main() {
@@ -62,21 +94,7 @@ async fn main() {
     axum::serve(listener, app).await.unwrap();
 }
 
-async fn start_mongo() -> mongodb::error::Result<Client> {
-    let uri = "mongodb://localhost:9999/?directConnection=true&tls=false&maxPoolSize=10";
-    let mut client_options = ClientOptions::parse(uri).await?;
 
-    let server_api = ServerApi::builder().version(ServerApiVersion::V1).build();
-    client_options.server_api = Some(server_api);
-    let client = Client::with_options(client_options)?;
-
-    client
-        .database("admin")
-        .run_command(doc! { "ping": 1 }, None)
-        .await?;
-    println!("Pinged your deployment. You successfully connected to MongoDB!");
-    Ok(client)
-}
 
 mod auth_path {
     use argon2::{
@@ -92,10 +110,10 @@ mod auth_path {
         routing::post,
         Json, Router,
     };
-    use cookie::time::convert::Day;
+    use axum_extra::extract::cookie::{CookieJar,Cookie};
     use std::{collections::HashMap, ops::Add, sync::Arc};
 
-    use crate::{sessionDocument, AppError, COL_USER_CREDS, COL_USER_SESS, DB_USER, DB_SESSIONS};
+    use crate::{SessionDocument, AppError, COL_USER_CREDS, COL_USER_SESS, DB_USER, DB_SESSIONS, COOKIE_SESSION};
     use chrono::{Utc, Days}
     use mongodb::{
         bson::{doc},
@@ -110,7 +128,7 @@ mod auth_path {
     }
 
     #[derive(Serialize, Deserialize)]
-    struct userDocument {
+    struct UserDocument {
         //the id is their Email
         _id: String,
         pass_hash: String,
@@ -120,19 +138,19 @@ mod auth_path {
         State(client): State<Arc<Client>>,
         Json(user_creds): Json<UserLoginCredentials>,
     ) -> Result<impl IntoResponse, AppError> {
-        println!("{} --- {}", user_creds.email, user_creds.password);
+        // println!("{} --- {}", user_creds.email, user_creds.password);
         let argo = Argon2::default();
        
         let query_res = client
             .database(DB_USER)
-            .collection::<userDocument>(COL_USER_CREDS)
+            .collection::<UserDocument>(COL_USER_CREDS)
             .find_one(doc! {"_id": &user_creds.email}, None)
             .await;
         if let Ok(Some(user_acc)) = query_res {
             let hash = match PasswordHash::new(&user_acc.pass_hash) {
                 Ok(hash) => hash,
                 Err(_) => return Err(AppError(anyhow::anyhow!("wut")))
-            }
+            };
 
 
             match argo.verify_password(user_creds.password.as_bytes(), &hash ) {
@@ -141,12 +159,12 @@ mod auth_path {
                 client
                 .database(DB_SESSIONS)
                 .collection(COL_USER_SESS)
-                .insert_one(sessionDocument{_id: sess_id,user_email:user_creds.email,expiry_date: Utc::now().add(Days::new(30)) }, None);
+                .insert_one(SessionDocument{_id: sess_id,user_email:user_creds.email,expiry_date: Utc::now().add(Days::new(30)) }, None);
 
 
-                let cook = cookie::Cookie::build(("sesshawn", sess_id.to_string()))
+                let cook = Cookie::build((COOKIE_SESSION, sess_id.to_string()))
                 .domain("localhost")
-                .path("/");
+                .path("/").http_only(true);
                 return Ok((StatusCode::OK, [(header::SET_COOKIE, cook.to_string())]))
                 },
                 Err(_) => return  Err(AppError(anyhow::anyhow!("wut")))
@@ -156,7 +174,6 @@ mod auth_path {
             argo.hash_password("To Prevent Timing Attacks".as_bytes(), &SaltString::generate(&mut OsRng));
             return Err(AppError(anyhow::anyhow!("wut")))
         }
-
         
     }
     
@@ -166,7 +183,7 @@ mod auth_path {
     ) -> Result<impl IntoResponse, AppError> {
         let user_acc = client
             .database(DB_USER)
-            .collection::<userDocument>(COL_USER_CREDS)
+            .collection::<UserDocument>(COL_USER_CREDS)
             .find_one(doc! {"_id" : &user_creds.email}, None)
             .await;
 
@@ -181,7 +198,7 @@ mod auth_path {
                 .database(DB_USER)
                 .collection(COL_USER_CREDS)
                 .insert_one(
-                    userDocument {
+                    UserDocument {
                         _id: user_creds.email.clone(),
                         pass_hash: password_hash,
                     },
@@ -190,11 +207,9 @@ mod auth_path {
                 .await?;
             let sess_id = uuid::Uuid::new_v4();
             let sess_expiry = chrono::Utc::now().add(chrono::Days::new(30));
-            client
-                .database(DB_USER)
-                .collection(COL_USER_SESS)
+            client.database(DB_USER).collection(COL_USER_SESS)
                 .insert_one(
-                    sessionDocument {
+                    SessionDocument {
                         _id: sess_id,
                         expiry_date: sess_expiry,
                         user_email: user_creds.email,
@@ -202,17 +217,37 @@ mod auth_path {
                     None,
                 )
                 .await?;
-            Ok((StatusCode::OK, [(header::SET_COOKIE, sess_id.to_string())]))
+            let cook = Cookie::build((COOKIE_SESSION, sess_id.to_string()))
+            .domain("localhost")
+            .path("/").http_only(true);
+            Ok((StatusCode::OK, [(header::SET_COOKIE, cook.to_string())]))
         } else {
             Err(AppError(anyhow::anyhow!("wut")))
         }
     }
 
+    
+    async fn logout_user(State(client): State<Arc<Client>>, jar: CookieJar ) -> Result<impl IntoResponse, AppError> {
+        if let Some(sess_id) =  jar.get(COOKIE_SESSION) {
+            client.database(DB_SESSIONS).collection::<SessionDocument>(COL_USER_SESS).delete_one(doc! {"_id": sess_id.to_string()}, None).await;
+            Ok((StatusCode::OK, [(header::SET_COOKIE, "".to_string())]))
+
+        } else {
+            Ok((StatusCode::IM_A_TEAPOT, [(header::SET_COOKIE, "".to_string())]))
+        }
+    }
+
+    async fn send_email_reset(State(client): State<Arc<Client>>,Json(user_creds): Json<UserLoginCredentials>) -> impl IntoResponse {
+        
+    }
+    
     pub fn build(mongodb_client: Arc<Client>) -> Router {
         Router::new()
             .route("/login", post(login_user))
+            .route("/register", post(register_user))
+            .route("/logout", post(logout_user))
+            .route("/forgot-password", po)
             .with_state(mongodb_client)
     }
 
-    async fn verify_creds(email: &str, password: &str) -> bool {}
 }
